@@ -11,12 +11,9 @@ pipeline {
                 bat './mvnw.cmd clean package'
             }
         }
-        stage('Ejecutar aplicación') {
+        stage('Archivar artefacto') {
             steps {
-                bat '''
-                    set JAVA_OPTS=-Djavafx.platform=any
-                    java --module-path "C:/Program Files/JavaFX/lib" --add-modules javafx.controls,javafx.fxml -jar target/Vuelos-0.0.1-SNAPSHOT.jar
-                '''
+                archiveArtifacts artifacts: 'target/Vuelos-0.0.1-SNAPSHOT.jar', fingerprint: true
             }
         }
     }
